# cvxrust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_lp.rs  lasso.rs  least_squares.rs  portfolio.rs  quadratic_program.rs
src/: error.rs  lib.rs  problem.rs  sparse.rs
src/atoms/: affine.rs  mod.rs  nonlinear.rs
src/canon/: canonicalizer.rs  lin_expr.rs  mod.rs
src/constraints/: constraint.rs  mod.rs
src/dcp/: curvature.rs  mod.rs  sign.rs
src/expr/: constant.rs  expression.rs  mod.rs  shape.rs  variable.rs
src/solver/: clarabel.rs  mod.rs  stuffing.rs
tests/: atoms_tests.rs  solve_tests.rs
